--- a/src/main/resources/templates/appointment/appointments.html
+++ b/src/main/resources/templates/appointment/appointments.html
@@ -124,7 +124,7 @@
                             th:value="${patient.id}"
                             th:text="${patient.firstName}"></option>
                 </select>
-                <input type="submit" name="text" class="input" value="sumbit" placeholder="Type here...">
+                <input type="submit" name="text" class="input" value="CHOOSE" placeholder="Type here...">
                 <!--                <input type="submit" value="submit"/>-->
             </form>
         </td>
@@ -139,7 +139,7 @@
                             th:value="${doctor.id}"
                             th:text="${doctor.firstName}"></option>
                 </select>
-                <input type="submit" name="text" class="input" value="sumbit" placeholder="Type here...">
+                <input type="submit" name="text" class="input" value="CHOOSE" placeholder="Type here...">
                 <!--                <input type="submit" value="submit"/>-->
             </form>
         </td>
@@ -154,7 +154,7 @@
                             th:value="${department.id}"
                             th:text="${department.name}"></option>
                 </select>
-                <input type="submit" name="text" class="input" value="sumbit" placeholder="Type here...">
+                <input type="submit" name="text" class="input" value="CHOOSE" placeholder="Type here...">
                 <!--                <input type="submit" value="submit"/>-->
             </form>
         </td>
